[package]
name = "iaudit"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-cors = { version = "0.7.0" }
actix-files = { version = "0.6.6" }
actix-web = { version = "4.9.0" }
actix-multipart = { version = "0.7.2" }
anyhow = { version = "1.0.93" }
async-trait = { version = "0.1.83" }
chrono = { version = "0.4.38", features = ["serde"] }
config = { version = "0.14.1" }
futures = { version = "0.3.31" }
murmurhash64 = { version = "0.3.1" }
thiserror = { version = "2.0.0" }
once_cell = { version = "1.20.2" }
qdrant-client = { version = "1.12.1" }
regex = { version = "1.11.1" }
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = { version = "1.0.132" }
tonic = { version = "0.12.3" }
tracing = { version = "0.1.40", features = ["log"] }
tracing-log = { version = "0.2.0" }
tracing-appender = { version = "0.2.3" }
tracing-actix-web = { version = "0.7.14" }
tracing-bunyan-formatter = { version = "0.3.9" }
uuid = { version = "1.11.0", features = ["v4"] }

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["registry", "env-filter"]

[dependencies.tokio]
version = "1.41.0"
features = ["macros", "rt-multi-thread", "rt"]
